--- a/GFL/index.html
+++ b/GFL/index.html
@@ -53,7 +53,7 @@
                 <p><h1><a href="/GFL/indexsub">Link to topics repository.</a></h1></p>
 
                 <p>Use <code>Tags:</code> at the start to search using tags. Use Space to separate tags. Tags are case-sensitive.</p>
-
+                <!-- Radio button to switch between word search and tag search. Checkbox for each tag. -->
                 <form onsubmit="findCards()">
                     <input type="text" placeholder="Search..." id="search-text">
                     <input type="submit">
