--- a/GFL/index.html
+++ b/GFL/index.html
@@ -125,12 +125,12 @@
             }
 
             function setQuestionBoxes(cards) {
-                //let tagList = cards.tags.map(tagObject => {`<span class="tags">${tagObject}</span>`})
+                let tagList = cards.tags.map(tagObject => { return `<span class="tags">${tagObject}</span>` })
                 return `<fieldset>
                     <legend><h3>${cards.questions}</h3></legend>
                     ${cards.answers}
                     <hr style="border-top: 1px dashed;">
-                    Tags: <span class="tags">${cards.tags}</span>
+                    Tags: ${tagList}
                     </fieldset>`;
             }
         </script>
