--- a/GFL/index.html
+++ b/GFL/index.html
@@ -131,7 +131,7 @@
                     <legend><h3>${cards.questions}</h3></legend>
                     ${cards.answers}
                     <hr style="border-top: 1px dashed;">
-                    Tags: ${tagList}
+                    Tags: ${tagList.join(' ')}
                     </fieldset>`;
             }
         </script>
