--- a/GFL/index.html
+++ b/GFL/index.html
@@ -69,6 +69,7 @@
         <script>
             const cardField = document.getElementById("qna");
             const questionCards = data;
+            var boxes = '';
             
             if (sessionStorage.outputCards == null) {
                 randomCards();
