--- a/GFL/index.html
+++ b/GFL/index.html
@@ -134,7 +134,7 @@
                     <legend><h3>${cards.questions}</h3></legend>
                     ${cards.answers}
                     <hr>
-                    Tags: ${cards.tags.map(tagObject => `<span class="tags">${tagObject}</span>` ).join(' ')}
+                    Tags: ${cards.tags.map(val => `<span class="tags">${val}</span>` ).join(' ')}
                     </fieldset>`;
             }
         </script>
