break to margin

--- a/GFL/index.html
+++ b/GFL/index.html
@@ -131,7 +131,7 @@
             }
 
             function setQuestionBoxes(cards) {
-                return `<br><fieldset>
+                return `<fieldset>
                     <legend><h3>${cards.questions}</h3></legend>
                     ${cards.answers}
                     <hr>
