--- a/GFL/index.html
+++ b/GFL/index.html
@@ -53,13 +53,23 @@
                 <p><h1><a href="/GFL/indexsub">Link to topics repository.</a></h1></p>
 
                 <p>Use <code>Tags:</code> at the start to search using tags. Use Space to separate tags. Tags are case-sensitive.</p>
-                <!-- Radio button to switch between word search and tag search. Checkbox for each tag. CSS to hide. -->
-                <div id="tagsList"></div>
-                <form onsubmit="findCards()">
-                    <input type="text" placeholder="Search..." id="search-text">
-                    <input type="submit">
-                </form>
                 
+                <!--div id="search-input-type">
+                    <input type="radio" id="text-input" name="input-type" value="text" checked="checked">
+                    <label for="text-input">Search by keywords.</label>
+                    <input type="radio" id="tag-input" name="input-type" value="tag">
+                    <label for="tag-input">Search by tags.</label>
+                </div!-->
+                <!-- Checkbox for each tag. CSS to hide. -->
+                <div id="tags-list"></div>
+
+                <div id="search-box">
+                    <form onsubmit="findCards()">
+                        <input type="text" placeholder="Search..." id="search-text">
+                        <input type="submit">
+                    </form>
+                </div>
+
                 <div id="qna"></div>
             </section>
         </div>
@@ -69,10 +79,9 @@
         <script type="text/javascript" src="/externaljavascript.js"></script>
         <script>
             const cardField = document.getElementById('qna');
-            const tagsField = document.getElementById('tagsList');
             const questionCards = data;
 
-            tagsField.innerHTML = `${Object.values(dataTags).map(val => `<span class="tags">${val}</span>` ).join(' ')}`;
+            document.getElementById('tags-list').innerHTML = Object.values(dataTags).map(val => `<span class="tags">${val}</span>` ).join(' ');
             
             if (sessionStorage.outputCards == null) {
                 cardField.innerHTML = randomCards();
