--- a/GFL/index.html
+++ b/GFL/index.html
@@ -82,7 +82,7 @@
             <section id="main_content">
                 <p><h1><a href="/GFL/indexsub">Link to topics repository.</a></h1></p>
                 
-                <div id="search-input-type">
+                <div>
                     <label><input type="radio" id="text-input" name="input-type" onclick="textMode()" checked="checked">Search by keywords</label>
                     <label><input type="radio" id="tag-input" name="input-type" onclick="tagMode()">Search by tags</label>
                 </div>
@@ -107,7 +107,7 @@
             const questionCards = data;
 
             document.getElementById('tags-list').innerHTML = Object.values(dataTags).map(val => 
-            `<label class="tags unselectedTag" id="${val}-label"><input type="checkbox" id="${val}" onclick="toggleTag(this)">${val}</label>` ).join(' ');
+            `<label class="tags unselectedTag" id="${val}-label"><input type="checkbox" id="${val}" onclick="toggleTag(this)">${val}</label>` ).join('');
             
             if (sessionStorage.outputCards == null) {
                 cardField.innerHTML = randomCards();
